syntax = "proto3";
package scraper;

import "google/protobuf/timestamp.proto";

service Scraper {
    rpc ScrapeTwitter (ScrapeTwitterReq) returns (ScrapeTwitterResp);
	rpc GetTwitterScrapingRecords(GetTwitterScrapingRecordsReq) returns (GetTwitterScrapingRecordsResp);
}

message ScrapeTwitterReq {
	string username = 1;
	google.protobuf.Timestamp start_at = 2; 
	google.protobuf.Timestamp end_at = 3;
}

message ScrapeTwitterResp {
	uint64 id = 1;
}

message GetTwitterScrapingRecordsReq {
	uint64 id = 1;
}

message GetTwitterScrapingRecordsResp {
	ScrapeTwitterReq original_req = 1;
	repeated ScrapingRecord records = 2;
}

message ScrapingRecord {
	uint64 tweet_id = 1;
	uint32 chain_id = 2;
	string from_token_addr = 3;
	string to_token_addr = 4;
	uint64 from_amount = 5;
	string txn_id = 6;
}